[package]
name = "luminar"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[dependencies]
regex = "1.10.3"
lazy_static = "1.4.0"
cranelift = "0.111.0"
cranelift-codegen = "0.111.0"
cranelift-frontend = "0.111.0"
cranelift-module = "0.111.0"
cranelift-jit = "0.111.0"
cranelift-native = "0.111.0"
